tests/machine/x/ts/list_nested_assign.ts
let matrix = [[1, 2], [3, 4]];
matrix = 5;
console.log(matrix[1][0]);
